# datalogger-jhon

./: partitions.csv  readme.txt  sdkconfig  sdkconfig.old  system_info.txt
main/: CMakeLists.txt  main.c  project_defines.h  project_tasks.h  project_typedefs.h
main/app/: helpers.c  helpers.h  main_callback.c  main_callback.h  main_task.c  sensor_callback.c  sensor_callback.h  sensor_task.c
main/app/calibration/: calibration.h  input_calibration.c
main/app/configuration/: configuration.h  input_configuration.c  sensor_config.c
main/app/gui/: gui.h  nextion_1.c
main/app/sensor/: sensor.c  sensor.h
main/app/testing/: test.c  test.h  testing.c  testing.h
main/app/testing/new_test/: new_test.c  new_test.h
main/app/time/: time_esp32s2.c  time_esp32s2.h
main/driver/dial_big_async/: dial_big_async.c  dial_big_async.h
main/driver/dial_short_async/: dial_short_async.c  dial_short_async.h
main/driver/hx711_async/: hx711_async.c  hx711_async.h
main/driver/nextion_async/: nextion_async.c  nextion_async.h
